Added support for sending settings.json

--- a/settings.json
+++ b/settings.json
@@ -19,7 +19,7 @@
       "bookmarks":      "Bookmarks",
       "projects":       "Projects",
       "tags":           "Tags",
-      "title":          "Discobot",
+      "title":          "Discobots",
       "tagline":        "A blog on many things, but mostly computers",
       "entire_post":    "Read entire post",
       "author":         "Dusko Jordanovski",
@@ -34,7 +34,7 @@
       "bookmarks":      "Букмаркс",
       "projects":       "Проекти",
       "tags":           "Тагови",
-      "title":          "Discobot",
+      "title":          "Discobots",
       "tagline":        "Блог за многу ствари, но највеќе за компутери",
       "entire_post":    "Прочитај го цел пост",
       "author":         "Душко Јордановски",
