Debugging and testing file uploads

--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,10 @@
   "debug":       true,
   "port":        3000,
   "server":      "127.0.0.1",
+  "remotePort":  3000,
+  "remoteUrl":   "127.0.0.1",
   "password":    "AEUOBA$@*Yfaf4oiuh2Aa$DhQI$Dha48d40dA$Id881048dn1F$18hg4f1",
+  "contentDirs": ["posts", "templates", "static"],
   "gaCode":      "GA-ABCDEFG",
   "postsUrl":    "/posts",
   "tagsUrl":     "/tags",
@@ -10,7 +13,6 @@
   "errorLog":    "error.log",
   "maxExcerpts": 2,
   "pagination":  9,
-  "contentDirs": ["posts", "templates", "static"],
   "languages":   ["en", "mk"],
   "langinfo":    {"en": "English", "mk": "Македонски"},
   "sitemenus":   ["bookmarks"],
