Added file change notification and possibility to disable caching for posts
Two new settings in settings.json:

"watchFiles": activates file watcher for directories having
markdown-files. if "true", useCaching is automatically set to false

"useCaching": if true, pages are cached, otherwise they are built from
scratch

It's possible now to have a local installation that updates while you
are writing on your markdown files. Set this to false for a public
installation to which instance you publish your posts.

--- a/settings.json
+++ b/settings.json
@@ -13,6 +13,8 @@
   "errorLog":    "error.log",
   "maxExcerpts": 2,
   "pagination":  9,
+  "watchFiles":  true,
+  "useCaching":  true,
   "languages":   ["en", "mk"],
   "langinfo":    {"en": "English", "mk": "Македонски"},
   "sitemenus":   ["bookmarks"],
